MultiLanguage & Bugfix with layoutshift @navigation

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -203,8 +203,9 @@ align-items: center;        }
       }
 
       button {
-        font-size: 20px;
-        background-color: var(--accent);
+        display: flex;
+        gap: 10px;
+        align-items: center;
       }
     }
   }
